--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh; 
-    background-image: radial-gradient(darkgray, black);
+    background-image: radial-gradient(black, darkblue);
     background-size: contain; 
 }
 main{
