--- a/scss/pages/torneo.scss
+++ b/scss/pages/torneo.scss
@@ -1,6 +1,6 @@
     /* Estilos para el banner */
     .banner {
-        background-image: url(https://images.unsplash.com/photo-1431324155629-1a6deb1dec8d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+        background-image: url(https://images.unsplash.com/photo-1514514757092-71ebbc3db4e6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=895&q=80);
         background-size: cover;
         background-position: center;
         height: 400px;
@@ -82,6 +82,10 @@
         padding: 10px; 
         text-align: center; 
       }
+
+    .titulo-tabla {
+        text-align: center;
+    }
     
       
       
