--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -2,7 +2,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(200, 182, 248);
+    background-color: darkgray;
     width: 100%;
     height: 5em;
    
@@ -35,5 +35,11 @@ footer{
 
 .Copyright{
    font-size: .9em;
-   align-self: end;
+   align-self: center;
+   color: white;
+}
+footer{
+    margin: 0%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 }
