--- a/scss/pages/formulario.scss
+++ b/scss/pages/formulario.scss
@@ -1,3 +1,11 @@
+.titulo-precios{
+    font-size: x-large;
+    margin-top: 30px;
+    margin-bottom: 0.5rem;
+    color: #000;
+    text-align: center;
+}
+
 #parrafoTorneos{
     border: 2px solid black;
     border-radius: 10px;
