--- a/scss/pages/producto.scss
+++ b/scss/pages/producto.scss
@@ -1,3 +1,4 @@
+/*Tarjetas*/
 .card {
     background-color: #fff;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -25,61 +26,62 @@
     font-size: 16px;
     margin: 0 0 20px;
   }
-  
-  .card-btn {
-    background-color: #007bff;
-    border: none;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
 
-  /*Carousel*/
-
-  .carousel-item img {
-    width: 25%;
-    height: auto;
-    border-radius: 8px;
-    }
-  
-    .carousel-control-prev,
-    .carousel-control-next {
-    width: 5%;
-    }
-    
-    .carousel-control-prev-icon,
-    .carousel-control-next-icon {
-    width: 100%;
-    height: 100%;
-    }
-    .carousel-caption {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    }
-
-    .carousel-item {
-    background-color: black;
-    }
-   
-    .carousel-caption h1,
-    .carousel-caption p,
-    .carousel-caption a {
-    font-size: 2rem;
-    padding: 1rem;
-    color: white;
-    }
-    
-    .carousel-caption a {
-    font-size: 1.5rem;
-    padding: 0.5rem 1rem;
-    color: black;
-    }
-    .t-prod{
+  .t-prod{
         text-align: center;
         text-decoration: solid;
         color: black solid;
         text-shadow: 1px;
+        font-size: xx-large;
     
-    }
+  }
+
+/*Carrousel*/
+
+  #myCarousel {
+    width: 80%;
+    margin: auto;
+    border: 2px solid black;
+    border-radius: 8px;
+    background-color: #fff;
+    margin-bottom: 50px;
+    margin-top: 25px;
+  }
+  
+  .carousel-inner {
+    border-radius: 6px;
+  }
+  
+  .carousel-item img {
+    max-height: 300px;
+    object-fit: cover;
+  }
+  :root {
+    --letra-negra: #000000;
+  }
+  @mixin letraNegra {
+    color: var(--letra-negra);
+  }
+  .carousel-caption {
+    @include letraNegra;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .btn-prods {
+    @include btn-style;
+    @include btn-hover;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+    
+  
+
+
+  
+  
