--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -2,11 +2,12 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: darkgray;
+    background-color: rgb(5, 82, 13);
     width: 100%;
     height: 5em;
-   
+  
 }
+
 footer{
     .footer-p{
         font-size: 1.25em;
@@ -37,9 +38,4 @@ footer{
    font-size: .9em;
    align-self: center;
    color: white;
-}
-footer{
-    margin: 0%;
-    margin-top: 0%;
-    margin-bottom: 0%;
 }
