--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,7 @@
 
 body {
   background: radial-gradient(#d5e8d6, #1ab91a);
-  background-size: contain;
-  position: relative;
-  padding-bottom: 60px; }
+  background-size: contain; }
 
 main {
   margin-top: 30px;
@@ -222,12 +220,7 @@ ul {
   background-color: #3d7208;
   border-radius: 8px;
   display: inline-block;
-  padding: 15px;
-  position: absolute;
-  right: 225px;
-  bottom: 50px;
-  width: 300px;
-  height: 450px; }
+  padding: 15px; }
 
 .intro-forms {
   position: absolute;
@@ -307,9 +300,7 @@ select {
 
 .imagenes {
   border: #000 2px;
-  border-radius: 12px;
-  position: relative;
-  left: 300px; }
+  border-radius: 12px; }
 
 /*Tarjetas*/
 .card {
@@ -373,7 +364,8 @@ select {
   width: 25%;
   margin-right: 25px;
   margin-left: 40px;
-  border-radius: 10px; }
+  border-radius: 10px;
+  margin-bottom: 60px; }
   .btn-prods:hover {
     background-color: #0062cc; }
 
