--- a/scss/pages/producto.scss
+++ b/scss/pages/producto.scss
@@ -26,8 +26,7 @@
   }
 }
 
-
-  .t-prod{
+.t-prod{
         text-align: center;
         text-decoration: solid;
         color: rgb(255, 255, 255) solid;
@@ -78,6 +77,7 @@
     margin-right: 25px ;
     margin-left: 40px;
     border-radius: 10px;
+    margin-bottom: 60px;
   }
     
   
