--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,18 +1,18 @@
 //General
 
-@import "../general/reset.scss";
+@import "./general/reset.scss";
 
 //Layout
 
-@import "../layout/footer.scss";
-@import "../layout/header.scss";
-@import "../layout/media.scss";
-@import "../layout/botones.scss";
+@import "./layout/footer.scss";
+@import "./layout/header.scss";
+@import "./layout/media.scss";
+@import "./layout/botones.scss";
 
 //Pages
 
-@import "../pages/index.scss";
-@import "../pages/formulario.scss";
-@import "../pages/multimedia.scss";
-@import "../pages/producto.scss";
-@import "../pages/torneo.scss";
+@import "./pages/index.scss";
+@import "./pages/formulario.scss";
+@import "./pages/multimedia.scss";
+@import "./pages/producto.scss";
+@import "./pages/torneo.scss";
