--- a/scss/layout/_botones.scss
+++ b/scss/layout/_botones.scss
@@ -1,6 +1,6 @@
 @mixin btn-style {
     border: none;
-    padding: 10px 20px;
+    padding: 12px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
