--- a/scss/layout/_botones.scss
+++ b/scss/layout/_botones.scss
@@ -15,5 +15,50 @@
     &:hover {
       background-color: #0062cc;
     }
+}
+  
+.btn-float {
+    display: inline-block;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    background-color: #007bff;
+    color: white;
+    border-radius: 8px;
+    padding: 12px 24px;
+    text-decoration: none;
+    z-index: 999;
+    transition: all 0.3s ease;
+  
+    &:hover {
+      background-color: #0062cc;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+  
+    &:active {
+      transform: translateY(2px);
+      box-shadow: none;
+    }
+  
+}
+  
+.btn-round {
+    display: inline-block;
+    right: 20px;
+    padding: 12px 24px;
+    background-color: #5c655c;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  
+    &:hover {
+      background-color: #454a45;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
   }
   
