--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ footer .items-footer a:active {
   color: #000; }
 
 .Copyright {
-  font-size: .9em;
+  font-size: 0.9em;
   align-self: center;
   color: white; }
 
