--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,41 +1,40 @@
-footer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: rgb(49, 164, 60);
-    width: 100%;
-    height: 5em;
-  
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(49, 164, 60);
+  width: 100%;
+  height: 5em;
 }
 
-footer{
-    .footer-p{
-        font-size: 1.25em;
-        align-self: flex-start;
-        color: black
-     }
-     .items-footer{
-        align-self: center;
-        font-size: 20px;
-        color: rgb(0, 0, 0);
-     }
-        .items-footer a{
-            padding: 0px 45px;
-            color: rgb(5, 5, 5);
-        }
-        .items-footer a:hover{
-            font-size: 30px;
-            color: rgb(5, 5, 5);
-            transition: 0.2s;
-        }
-        .items-footer a:active{
-            font-size: 30px;
-            color: #000;
-        }
+footer {
+  .footer-p {
+    font-size: 1.25em;
+    align-self: flex-start;
+    color: black;
+  }
+  .items-footer {
+    align-self: center;
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+  }
+  .items-footer a {
+    padding: 0px 45px;
+    color: rgb(5, 5, 5);
+  }
+  .items-footer a:hover {
+    font-size: 30px;
+    color: rgb(5, 5, 5);
+    transition: 0.2s;
+  }
+  .items-footer a:active {
+    font-size: 30px;
+    color: #000;
+  }
 }
 
-.Copyright{
-   font-size: .9em;
-   align-self: center;
-   color: white;
+.Copyright {
+  font-size: 0.9em;
+  align-self: center;
+  color: white;
 }
