--- a/scss/pages/_producto.scss
+++ b/scss/pages/_producto.scss
@@ -1,31 +1,3 @@
-/*Tarjetas*/
-.card {
-  background-color: #fff;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  overflow: hidden;
-  width: 300px;
-  margin: 20px;
-
-  .card-img {
-    width: 100%;
-  }
-
-  .card-content {
-    padding: 20px;
-
-    .card-title {
-      font-size: 24px;
-      margin: 0 0 10px;
-    }
-
-    .card-text {
-      font-size: 16px;
-      margin: 0 0 20px;
-    }
-  }
-}
-
 .t-prod {
   text-align: center;
   text-decoration: solid;
@@ -57,6 +29,10 @@
       object-fit: cover;
     }
   }
+  .carousel-control-prev-icon, .carousel-control-next-icon {
+    display: inline-block;
+  }
+  
 }
 
 :root {
